# Image_Processor

./: README.md
raw_code/: CMakeLists.txt  filters.cpp  filters.h  filters_applier.cpp  filters_applier.h  image.h  image_parser.cpp  image_parsers.h  image_processor.cpp  logger.cpp  logger.h  string_parser.cpp  string_parser.h
